classDiagram

namespace gestion_technologies{

class Technologie {
  id : int
  nom : String
  description : String
}

class CategorieTechnologie {
  id : int
  nom : String
  description : String
}
}

namespace gestion_competences {
class Competence {
  id : int
  nom : String
  description : String
}
}

namespace gestion_technologies {
class Technologie
}

Technologie "*" --> "1" CategorieTechnologie
Technologie "*" --> "1" Competence